[gd_scene load_steps=6 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://hero.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
height = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[sub_resource type="CircleShape2D" id=3]
radius = 210.0

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="wall_collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="event_collision" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 0

[node name="event_collision_shape" type="CollisionShape2D" parent="event_collision"]
shape = SubResource( 2 )

[node name="vision" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 0

[node name="vision_shape" type="CollisionShape2D" parent="vision"]
shape = SubResource( 3 )
[connection signal="area_entered" from="event_collision" to="." method="_on_event_collision_area_entered"]
[connection signal="area_entered" from="vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="vision" to="." method="_on_vision_area_exited"]
